--- a/CSS/login.css
+++ b/CSS/login.css
@@ -13,3 +13,16 @@ form {
 	padding: 26px;
 	border-radius: 10px;
 }
+
+form img {
+    display: block;
+	margin: 0 auto;
+    margin-bottom: 35px;
+    width: 100%;
+}
+
+form input,
+form button {
+    font-size: 18px;
+	margin: 16px 0;
+}
