--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,6 +1,7 @@
 body {
 	background: url(http://i.imgur.com/GHr12sH.jpg) no-repeat center center fixed;
     background-size: cover;
+    color: #353535;
 }
 
 .form-login {
