--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1,4 +1,7 @@
-html {
+body {
+	background: url(http://i.imgur.com/GHr12sH.jpg) no-repeat center center fixed;
+    background-size: cover;
+    color: #353535;
     font-family: Helvetica, sans-serif;
 }
 
