--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -22,3 +22,9 @@ body {
     background-color: white;
     border-radius: 10px;
 }
+
+.thead-dark{
+    color: #fff;
+    background-color: #212529;
+    border-color: #32383e;
+}
