--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -5,6 +5,12 @@ body {
     font-family: Helvetica, sans-serif;
 }
 
+nav {
+    background-color: #0275d8;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
 header img {
     height: 50%;
 }
