--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -27,6 +27,16 @@ body {
     .container-section{
         padding: 3px;
     }
+
+    .btn-salir{
+        margin-left: 85px;
+    }
+}
+
+@media screen and (min-width: 992px){
+    .btn-salir{
+        margin-right: 15px;
+    }
 }
 
 .table{
@@ -38,5 +48,5 @@ body {
     color: #fff;
     background-color: #212529;
     border-color: #32383e;
-    border-radius: 3px;
+    border-radius: 3pxl
 }
