--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -1,6 +1,5 @@
 body {
     color: #353535;
-    background-color: #E9EBEE;
 }
 
 .nav-item img{
@@ -18,9 +17,10 @@ body {
 .container-section{
     min-height: 100%;
     min-height: 100vh;
-    display: flex;
-    align-items: center;
-    padding: 50px;
+    padding-top: 8vh;
+    padding-left: 50px;
+    padding-right: 50px;
+    background-color: #efefef;
 }
 
 @media screen and (max-width: 991px){
@@ -29,12 +29,13 @@ body {
     }
 
     .container-section{
-        padding: 3px;
+        padding-left: 25px;
+        padding-right: 25px;
     }
 
     .btn-salir{
         float: right;
-        margin-right: 25px;
+        margin-right: 22px;
     }
 }
 
@@ -42,6 +43,14 @@ body {
     .navbar-right {
         margin-right: 15px !important;
     }
+}
+
+.btn-group{
+    width: 100%;
+}
+
+.btn-ab{
+    margin-bottom: 10px;
 }
 
 .table{
