--- a/public_html/css/login.css
+++ b/public_html/css/login.css
@@ -1,3 +1,8 @@
+body {
+	background: url(http://i.imgur.com/GHr12sH.jpg) no-repeat center center fixed;
+	background-size: cover;
+}
+
 .nav-logo{
 	margin-top: 5px;
 }
