--- a/public_html/css/login.css
+++ b/public_html/css/login.css
@@ -22,8 +22,8 @@ body {
     width: 100%;
 }
 
-.form-login input,
+.form-login .input-group,
 .form-login button {
     font-size: 18px;
-	margin-bottom: 16px 0;
+	margin: 16px 0;
 }
