--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -69,3 +69,10 @@ body {
     margin-left: 20%;
     width: 70%;
 }
+
+@media (min-width: 768px) {
+    .modal-content {
+        margin-left: 2%;
+        width: 95%;
+    }
+}
