--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -24,3 +24,12 @@ header img {
     font-size: 18px;
 	margin: 16px 0;
 }
+
+.spinner {
+    position: absolute;
+    width: 50vw;
+    height: 50vw;
+    background-color: white;
+    top: 20vw;
+    left: 0px;
+}
